# irv_trt_pose

./: .gitignore  .gitmodules  INSTALL.md  README.md
irv_trt_pose/: CMakeLists.txt  package.xml  setup.py
irv_trt_pose/launch/: pose_estimation.launch
irv_trt_pose/src/: estimator.py
irv_trt_pose/src/rtrt_pkg_lib/: estimation_utils.py  pose_estimator.py
pose_msgs/: package.xml
pose_msgs/msg/: PersonDetection.msg
ros_trt_pose/: CMakeLists.txt  package.xml  setup.py
ros_trt_pose/launch/: pose_estimation.launch
ros_trt_pose/src/: estimator.py
ros_trt_pose/src/ros_trt_pose/: pose_estimator.py
ros_trt_pose/src/rtrt_pkg_lib/: pose_estimator.py
